@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                WordPress-XMLRPC
-version:             1.15
+version:             1.17
 abstract:            ~
 license:             ~
 author:              ~
