@@ -4,11 +4,11 @@ use lib './lib';
 require './t/test.pl';
 use WordPress::XMLRPC;
 no strict 'refs';
-
+use Smart::Comments '###';
 ok(1,'starting test.');
 
 # WordPress has a bug - i think.. it doesn't register new categories properly via rpc
-exit;
+
 
 
 if( ! -f './t/wppost' ){
@@ -27,10 +27,13 @@ my $w = WordPress::XMLRPC->new(_conf('./t/wppost'));
 my $new_category_name ='category' .( int rand 1000 );
 print STDERR "new category name : $new_category_name\n";
 my $new_category_id;
-ok( $new_category_id = $w->newCategory($new_category_name) ) 
-   or die("failed newCategory( '$new_category_name' ) ".$w->errstr );
+ok( $new_category_id = $w->newCategory({
+   name => $new_category_name, 
+   description => ' different description then name..', # not supported, apparently
+   }) ) 
+   or die("failed name => '$new_category_name',  ".$w->errstr );
 
-print STDERR "newCategory( '$new_category_name' ) gets id :  $new_category_id\n\n";
+print STDERR " gets id :  $new_category_id\n\n\n";
 
 
 print STDERR "\n\n\nPART2\n\n";
@@ -41,11 +44,20 @@ ok( $getCategories = $w->getCategories, 'getCategories() returns');
 
 my $ref = ref $getCategories;
 
+=pod
 ok( $ref eq 'ARRAY' ,"getCategories() returns array ref (got $ref)");
 for my $c ( @$getCategories ){
    map { print STDERR "$_: $$c{$_}\n" } keys %$c;
    print STDERR "\n";
 }
+=cut
+
+print STDERR "\n\nTEST GET CATEGORY\n\n";
+
+my $got = $w->getCategory($new_category_id);
+ok( $got,"getCategory( $new_category_id  ) returns.. ");
+
+### $got
 
 
 
@@ -53,11 +65,11 @@ for my $c ( @$getCategories ){
 my $ncn = 'testcat'.( int rand 10000 );
 
 print STDERR "\n\n=======\nnewCategory.. \n";
-my $newCategory = $w->newCategory($ncn) 
+my $newCategory = $w->newCategory({ name => $ncn}) 
    or warn("newCategory no return, " . $w->errstr );
 
+
 ### $newCategory
-=pod
 unless( ok( $newCategory->{categoryName} eq $ncn ) ){
    my @k = keys %$newCategory;
    print STDERR "keys: ".scalar @k."\n";
@@ -69,7 +81,6 @@ unless( ok( $newCategory->{categoryName} eq $ncn ) ){
  die;
 }
 
-=cut
 
 
 
